feat: exercise bonus 4.1 to section-04, back-end

--- a/back-end/section-04/4.1/exercises/package.json
+++ b/back-end/section-04/4.1/exercises/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "bmi": "node bmi.js"
+    "bmi": "node bmi.js",
+    "fibonacci": "node bonus/fibonacci.js"
   },
   "author": "Lucas",
   "license": "ISC",
