--- a/back-end/section-06/6.1/exercises/package.json
+++ b/back-end/section-06/6.1/exercises/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node .",
-    "debug": "nodemon ."
+    "dev": "nodemon .",
+    "test": "mocha tests/**/*.test.js --exit"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,12 @@
     "sequelize": "^6.25.7"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "sequelize-test-helpers": "^1.4.3",
+    "sinon": "^14.0.2"
   }
 }
